// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer should have Loading page if no data is passed in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    favorites={Array []}
    onFavClick={[Function]}
    swData={Array []}
    type="planets"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          planets
</h2>,
        <div
          className="loading"
>
          Loading...
</div>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "planets",
        },
        "ref": null,
        "rendered": "planets",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Loading...",
          "className": "loading",
        },
        "ref": null,
        "rendered": "Loading...",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            planets
</h2>,
          <div
            className="loading"
>
            Loading...
</div>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "planets",
          },
          "ref": null,
          "rendered": "planets",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Loading...",
            "className": "loading",
          },
          "ref": null,
          "rendered": "Loading...",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardContainer should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    favorites={Array []}
    onFavClick={[Function]}
    swData={
        Array [
            Object {
              "climate": "temperate",
              "name": "Coruscant",
              "population": "1000000000000",
              "residents": Array [
                "Finis Valorum",
                "Adi Gallia",
                "Jocasta Nu",
              ],
              "terrain": "cityscape, mountains",
            },
          ]
    }
    type="planets"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          planets
</h2>,
        Array [
          <Card
            info={
                        Object {
                                    "climate": "temperate",
                                    "name": "Coruscant",
                                    "population": "1000000000000",
                                    "residents": Array [
                                      "Finis Valorum",
                                      "Adi Gallia",
                                      "Jocasta Nu",
                                    ],
                                    "terrain": "cityscape, mountains",
                                  }
            }
            isFavorited=""
            onFavClick={[Function]}
            type="planets"
/>,
        ],
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "planets",
        },
        "ref": null,
        "rendered": "planets",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": "01517859415283",
        "nodeType": "function",
        "props": Object {
          "info": Object {
            "climate": "temperate",
            "name": "Coruscant",
            "population": "1000000000000",
            "residents": Array [
              "Finis Valorum",
              "Adi Gallia",
              "Jocasta Nu",
            ],
            "terrain": "cityscape, mountains",
          },
          "isFavorited": "",
          "onFavClick": [Function],
          "type": "planets",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            planets
</h2>,
          Array [
            <Card
              info={
                            Object {
                                          "climate": "temperate",
                                          "name": "Coruscant",
                                          "population": "1000000000000",
                                          "residents": Array [
                                            "Finis Valorum",
                                            "Adi Gallia",
                                            "Jocasta Nu",
                                          ],
                                          "terrain": "cityscape, mountains",
                                        }
              }
              isFavorited=""
              onFavClick={[Function]}
              type="planets"
/>,
          ],
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "planets",
          },
          "ref": null,
          "rendered": "planets",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": "01517859415283",
          "nodeType": "function",
          "props": Object {
            "info": Object {
              "climate": "temperate",
              "name": "Coruscant",
              "population": "1000000000000",
              "residents": Array [
                "Finis Valorum",
                "Adi Gallia",
                "Jocasta Nu",
              ],
              "terrain": "cityscape, mountains",
            },
            "isFavorited": "",
            "onFavClick": [Function],
            "type": "planets",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CardContainer when there are no favorites, should have a message indicating there are no favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardContainer
    favorites={Array []}
    onFavClick={[Function]}
    swData={Array []}
    type="favorites"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          favorites
</h2>,
        <p
          className="loading"
>
          You have no favorites selected!
</p>,
      ],
      "className": "card-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "favorites",
        },
        "ref": null,
        "rendered": "favorites",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "You have no favorites selected!",
          "className": "loading",
        },
        "ref": null,
        "rendered": "You have no favorites selected!",
        "type": "p",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            favorites
</h2>,
          <p
            className="loading"
>
            You have no favorites selected!
</p>,
        ],
        "className": "card-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "favorites",
          },
          "ref": null,
          "rendered": "favorites",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "You have no favorites selected!",
            "className": "loading",
          },
          "ref": null,
          "rendered": "You have no favorites selected!",
          "type": "p",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
